cluster/apps/ntfy/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/name: ntfy
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.29.0
          args: ["serve"]
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
          volumeMounts:
            - name: config
              mountPath: /etc/ntfy
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: ntfy
