cluster/apps/ntfy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    gethomepage.dev/description: "Push notification server"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "sh-ntfy"
    gethomepage.dev/name: "ntfy"
    gethomepage.dev/pod-selector: app.kubernetes.io/name=ntfy
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - ntfy.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: ntfy
          port: 80
          weight: 1
